Safari365 Prod/src/objects/Opt__c.object
<CustomObject>
    <fields>
        <fullName>AC__c</fullName>
        <label>AC</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYSIS1__c</fullName>
        <label>ANALYSIS1</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYSIS2__c</fullName>
        <label>ANALYSIS2</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYSIS3__c</fullName>
        <label>ANALYSIS3</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHGEX1__c</fullName>
        <label>CHGEX1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHGEX2__c</fullName>
        <label>CHGEX2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHGEX3__c</fullName>
        <label>CHGEX3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLASS__c</fullName>
        <label>CLASS</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Code__c</fullName>
        <formula>CRM_Lookup__r.CODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Currency__c</fullName>
        <formula>CRM_Lookup__r.DEFAULT_CURRENCY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM</label>
        <referenceTo>CRM__c</referenceTo>
        <relationshipLabel>Opts</relationshipLabel>
        <relationshipName>Opts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Name__c</fullName>
        <formula>CRM_Lookup__r.NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB2_Description__c</fullName>
        <formula>DB2_Lookup__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB2 Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB2_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DB2</label>
        <referenceTo>DB2__c</referenceTo>
        <relationshipLabel>Opts</relationshipLabel>
        <relationshipName>Opts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB4_DESCRIPTION__c</fullName>
        <formula>DB4_Lookup__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB4 DESCRIPTION</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB4_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DB4</label>
        <referenceTo>DB4__c</referenceTo>
        <relationshipLabel>Opts</relationshipLabel>
        <relationshipName>Opts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DELETED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DELETED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DURATION_HRS__c</fullName>
        <label>DURATION_HRS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EX1__c</fullName>
        <label>EX1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EX2__c</fullName>
        <label>EX2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EX3__c</fullName>
        <label>EX3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCU__c</fullName>
        <label>FCU</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOCEX1__c</fullName>
        <label>FOCEX1</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOCEX2__c</fullName>
        <label>FOCEX2</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOCEX3__c</fullName>
        <label>FOCEX3</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INVOICE_TEXT1__c</fullName>
        <label>INVOICE TEXT1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INVOICE_TEXT2__c</fullName>
        <label>INVOICE TEXT2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCL_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LCL</label>
        <referenceTo>LCL__c</referenceTo>
        <relationshipLabel>Opts</relationshipLabel>
        <relationshipName>Opts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LOCALITY__c</fullName>
        <label>LOCALITY</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOC_Name__c</fullName>
        <formula>LCL_Lookup__r.DESCR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPFCU__c</fullName>
        <label>MPFCU</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Id__c</fullName>
        <externalId>true</externalId>
        <label>Opt_Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBX1__c</fullName>
        <label>PBX1</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBX2__c</fullName>
        <label>PBX2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBX3__c</fullName>
        <label>PBX3</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCODE__c</fullName>
        <label>PCODE</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERIODS_BASE__c</fullName>
        <label>PERIODS BASE</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PERIODS__c</fullName>
        <label>PERIODS</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCU__c</fullName>
        <label>SCU</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOD_ID__c</fullName>
        <label>SOD_ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOD_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SOD</label>
        <referenceTo>SOD__c</referenceTo>
        <relationshipLabel>Opts</relationshipLabel>
        <relationshipName>Opts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRV_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SRV</label>
        <referenceTo>SRV__c</referenceTo>
        <relationshipLabel>Opts</relationshipLabel>
        <relationshipName>Opts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SRV_Markup_Value__c</fullName>
        <formula>Text(SRV_Lookup__r.Markup_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRV Markup Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SRV_Name__c</fullName>
        <formula>SRV_Lookup__r.NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SRV Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierMarkup__c</fullName>
        <defaultValue>0</defaultValue>
        <label>SupplierMarkup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAX__c</fullName>
        <label>TAX</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VADD1__c</fullName>
        <label>VADD1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VADD2__c</fullName>
        <label>VADD2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VADD3__c</fullName>
        <label>VADD3</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VNAME__c</fullName>
        <label>VNAME</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>OPT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FCU__c</columns>
        <columns>Comment__c</columns>
        <columns>SRV_Name__c</columns>
        <columns>SRV_Lookup__c</columns>
        <columns>Opt_Id__c</columns>
        <columns>CHGEX1__c</columns>
        <columns>CHGEX2__c</columns>
        <columns>CHGEX3__c</columns>
        <columns>CHGEX4__c</columns>
        <columns>CHGEX5__c</columns>
        <columns>EX1__c</columns>
        <columns>EX2__c</columns>
        <columns>EX3__c</columns>
        <columns>EX5__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OPT-{0000000}</displayFormat>
        <label>OPT</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>